--- a/cadastro.html
+++ b/cadastro.html
@@ -21,11 +21,11 @@
       <nav class="nav gridItem">
         <nav class="nav gridItem">
           <ul>
-            <li><a class="nav-home" href="/index.html">Home</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Portifólio</a></li>
-            <li><a href="">Serviços</a></li>
-            <li><a href="">Contato</a></li>
+            <li><a class="nav-home" href="index.html">Home</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="portifolio.html">Portifólio</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Contato</a></li>
           </ul>
         </nav>
       </nav>
