--- a/portifolio.html
+++ b/portifolio.html
@@ -22,11 +22,12 @@
         <nav class="nav gridItem">
         <nav class="nav gridItem">
           <ul>
-            <li><a class="nav-home" href="">Home</a></li>
-            <li><a class="nav-home" href="">Sobre</a></li>
-            <li><a class="nav-home" href="">Portifólio</a></li>
-            <li><a class="nav-home" href="">Serviços</a></li>
-            <li><a class="nav-home" href="">Contato</a></li>
+            <li><a class="nav-home" href="index.html">Home</a></li>
+            <li><a class="nav-home" href="#">Sobre</a></li>
+            <li><a class="nav-home" href="portifolio.html">Portifólio</a></li>
+            <li><a class="nav-home" href="#">Serviços</a></li>
+            <li><a class="nav-home" href="#">Contato</a></li>
+            <li><a class="nav-home__login" href="login.html">Login</a></li>
           </ul>
         </nav>
       </nav>
