--- a/decorações-e-eventos.html
+++ b/decorações-e-eventos.html
@@ -31,7 +31,7 @@
     <section class="imagem-titulo">
         <div class="titulo__imagem">
             <span class="imagem-titulo_principal">Decorações e Eventos</span>
-            <img class="imagem__principal" src="/images/deco.jpeg" alt="">
+            <img class="imagem__principal" src="images/deco.jpeg" alt="">
         </div>
     </section>
 
@@ -43,17 +43,17 @@
 
         <div class="cards-container">
             <div class="card">
-              <img src="/images/flor1.jpg" alt="Flor 1">
+              <img src="images/flor1.jpg" alt="Flor 1">
               <h2 class="card-title">Flor 1</h2>
               <span class="card-price">R$ 10,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/flor2.jpg" alt="Flor 2">
+              <img src="images/flor2.jpg" alt="Flor 2">
               <h2 class="card-title">Flor 2</h2>
               <span class="card-price">R$ 15,00 (por haste)</span>
             </div>
             <div class="card">
-              <img src="/images/flor3.jpg" alt="Flor 3">
+              <img src="images/flor3.jpg" alt="Flor 3">
               <h2 class="card-title">Flor 3</h2>
               <span class="card-price">R$ 12,00 (por haste)</span>
             </div>
@@ -69,32 +69,32 @@
 
       <div class="cards-container">
           <div class="card">
-            <img src="/images/flor1.jpg" alt="Flor 1">
+            <img src="images/flor1.jpg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor2.jpg" alt="Flor 2">
+            <img src="images/flor2.jpg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor3.jpg" alt="Flor 3">
+            <img src="images/flor3.jpg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor1.jpg" alt="Flor 1">
+            <img src="images/flor1.jpg" alt="Flor 1">
             <h2 class="card-title">Flor 1</h2>
             <span class="card-price">R$ 10,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor2.jpg" alt="Flor 2">
+            <img src="images/flor2.jpg" alt="Flor 2">
             <h2 class="card-title">Flor 2</h2>
             <span class="card-price">R$ 15,00 (por haste)</span>
           </div>
           <div class="card">
-            <img src="/images/flor3.jpg" alt="Flor 3">
+            <img src="images/flor3.jpg" alt="Flor 3">
             <h2 class="card-title">Flor 3</h2>
             <span class="card-price">R$ 12,00 (por haste)</span>
           </div>
@@ -111,32 +111,32 @@
 
     <div class="cards-container">
         <div class="card">
-          <img src="/images/flor1.jpg" alt="Flor 1">
+          <img src="images/flor1.jpg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor2.jpg" alt="Flor 2">
+          <img src="images/flor2.jpg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor3.jpg" alt="Flor 3">
+          <img src="images/flor3.jpg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor1.jpg" alt="Flor 1">
+          <img src="images/flor1.jpg" alt="Flor 1">
           <h2 class="card-title">Flor 1</h2>
           <span class="card-price">R$ 10,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor2.jpg" alt="Flor 2">
+          <img src="images/flor2.jpg" alt="Flor 2">
           <h2 class="card-title">Flor 2</h2>
           <span class="card-price">R$ 15,00 (por haste)</span>
         </div>
         <div class="card">
-          <img src="/images/flor3.jpg" alt="Flor 3">
+          <img src="images/flor3.jpg" alt="Flor 3">
           <h2 class="card-title">Flor 3</h2>
           <span class="card-price">R$ 12,00 (por haste)</span>
         </div>
